FIX: correcoes sonar